@startuml

title __LINK's Class Diagram__\n

  package engine {
    package engine.particle {
      package engine.particle.link {
        class ParticleCable {
            - maxLength : float
            - restitution : float
            + ParticleCable()
            + getMaxLength()
            + getRestitution()
            + fillCollision()
        }
      }
    }
  }
  

  package engine {
    package engine.particle {
      package engine.particle.link {
        abstract class ParticleLink {
            + ParticleLink()
            + getParticles()
            # getCurrentLength()
            {abstract} + fillCollision()
        }
      }
    }
  }
  

  package engine {
    package engine.particle {
      package engine.particle.link {
        class ParticleRod {
            - length : float
            + ParticleRod()
            + fillCollision()
        }
      }
    }
  }
  

  ParticleCable -up-|> ParticleLink
  ParticleLink o-- Particle : p1
  ParticleLink o-- Particle : p2
  ParticleRod -up-|> ParticleLink


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
